# test3

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260204_000000_001_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  auth.py  users.py
backend/app/core/: __init__.py  config.py  database.py  security.py  vault.py
backend/app/crud/: __init__.py  user.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  auth.py  user.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(protected)/dashboard/: page.tsx
frontend/src/app/(protected)/profile/: page.tsx
frontend/src/components/auth/: auth-guard.tsx  login-form.tsx  register-form.tsx
frontend/src/components/layout/: header.tsx
frontend/src/lib/: query-client.ts
frontend/src/lib/api/: auth.ts  client.ts
frontend/src/lib/hooks/: use-auth.ts
frontend/src/lib/schemas/: auth.schema.ts
frontend/src/lib/stores/: auth-store.ts
frontend/src/types/: auth.ts
scripts/: gemini-cli.mjs  init-vault.sh
